// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codec golden files > writes invalid-attribute.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: heading" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`codec golden files > writes invalid-attribute.json as its golden HTML, plain text and Markdown > markdown 1`] = `""`;

exports[`codec golden files > writes invalid-attribute.json as its golden HTML, plain text and Markdown > text 1`] = `""`;

exports[`codec golden files > writes the valid fixture blocks.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div dir="rtl">
<h1>Plan</h1>
<ol start="0">
<li>
<p>
</p>
<ul>
<li>
<p>
<span data-rte-mention="42">
</span>
</p>
</li>
</ul>
</li>
</ol>
<div data-rte-column-break="">
</div>
<pre>
<code>const a = 1;
	b();</code>
</pre>
<hr/>
<table>
<tr>
<th colspan="2" rowspan="1" scope="col">
<p>
</p>
</th>
</tr>
<tr>
<td colspan="1" rowspan="1">
<p>
</p>
</td>
<td colspan="1" rowspan="1">
<blockquote>
<p>
</p>
</blockquote>
</td>
</tr>
</table>
<figure>
<img alt=""/>
</figure>
<div data-rte-provider="youtube">
</div>
</div>"
`;

exports[`codec golden files > writes the valid fixture blocks.json as its golden HTML, plain text and Markdown > html diagnostics 1`] = `
[
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 1,
    },
    "featureId": "fixture.align",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 4,
    },
    "featureId": "fixture.lists",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 1,
    },
    "featureId": "fixture.mention",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 6,
    },
    "featureId": "fixture.tables",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 3,
    },
    "featureId": "fixture.media",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
]
`;

exports[`codec golden files > writes the valid fixture blocks.json as its golden HTML, plain text and Markdown > markdown 1`] = `
{
  "diagnostics": [],
  "losses": [
    {
      "count": 2,
      "featureId": "core",
    },
    {
      "count": 1,
      "featureId": "fixture.align",
    },
    {
      "count": 2,
      "featureId": "fixture.lists",
    },
    {
      "count": 1,
      "featureId": "fixture.mention",
    },
    {
      "count": 1,
      "featureId": "fixture.blocks",
    },
    {
      "count": 1,
      "featureId": "fixture.tables",
    },
    {
      "count": 2,
      "featureId": "fixture.media",
    },
  ],
  "markdown": "# Plan

0. - [x] @Ada

\`\`\`typescript
const a = 1;
	b();
\`\`\`

---

>

<https://www.youtube.com/watch?v=x>",
}
`;

exports[`codec golden files > writes the valid fixture blocks.json as its golden HTML, plain text and Markdown > text 1`] = `
{
  "diagnostics": [],
  "losses": [
    {
      "count": 5,
      "featureId": "fixture.blocks",
    },
    {
      "count": 1,
      "featureId": "fixture.align",
    },
    {
      "count": 4,
      "featureId": "fixture.lists",
    },
    {
      "count": 6,
      "featureId": "fixture.tables",
    },
    {
      "count": 3,
      "featureId": "fixture.media",
    },
  ],
  "text": "Plan

0.
  - [x] @Ada

const a = 1;
	b();

---


	

https://www.youtube.com/watch?v=x",
}
`;

exports[`codec golden files > writes the valid fixture marks.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div lang="de-CH">
<p>Grüezi <a href="https://frontify.com">
<span data-rte-color="brand.red">
<strong>Welt</strong>
</span>
</a>
<em>
<br/>
</em>
<mark>H</mark>
<sub>2</sub>
<span lang="en" dir="ltr">O 😀</span>
</p>
</div>"
`;

exports[`codec golden files > writes the valid fixture marks.json as its golden HTML, plain text and Markdown > html diagnostics 1`] = `
[
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 1,
    },
    "featureId": "fixture.link",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
  {
    "code": "codecs.lossy-output",
    "details": {
      "count": 2,
    },
    "featureId": "fixture.colors",
    "messageKey": "codecs.lossy-output",
    "severity": "info",
  },
]
`;

exports[`codec golden files > writes the valid fixture marks.json as its golden HTML, plain text and Markdown > markdown 1`] = `
{
  "diagnostics": [],
  "losses": [
    {
      "count": 1,
      "featureId": "core",
    },
    {
      "count": 4,
      "featureId": "fixture.colors",
    },
    {
      "count": 7,
      "featureId": "fixture.marks",
    },
    {
      "count": 2,
      "featureId": "fixture.link",
    },
  ],
  "markdown": "Grüezi [**Welt**](https://frontify.com)\\
H2O 😀",
}
`;

exports[`codec golden files > writes the valid fixture marks.json as its golden HTML, plain text and Markdown > text 1`] = `
{
  "diagnostics": [],
  "losses": [
    {
      "count": 1,
      "featureId": "fixture.link",
    },
    {
      "count": 2,
      "featureId": "fixture.colors",
    },
    {
      "count": 4,
      "featureId": "fixture.marks",
    },
  ],
  "text": "Grüezi Welt (https://frontify.com)
H2O 😀",
}
`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<p>Warm words</p>
</div>"
`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > html 2`] = `
"<div>
<p>a</p>
</div>"
`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > markdown 1`] = `"Warm words"`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > markdown 2`] = `"a"`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > text 1`] = `"Warm words"`;

exports[`codec golden files > writes unknown-attribute.json as its golden HTML, plain text and Markdown > text 2`] = `"a"`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<p>Plain <strong>sparkly</strong> end</p>
</div>"
`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > html 2`] = `
"<div>
<p>a</p>
</div>"
`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > markdown 1`] = `"Plain **sparkly** end"`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > markdown 2`] = `"a"`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > text 1`] = `"Plain sparkly end"`;

exports[`codec golden files > writes unknown-mark.json as its golden HTML, plain text and Markdown > text 2`] = `"a"`;

exports[`codec golden files > writes unknown-node.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">
</div>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`codec golden files > writes unknown-node.json as its golden HTML, plain text and Markdown > markdown 1`] = `""`;

exports[`codec golden files > writes unknown-node.json as its golden HTML, plain text and Markdown > text 1`] = `""`;

exports[`codec golden files > writes unknown-nodes.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<p>Before</p>
<div role="group" aria-label="Unsupported content: callout" data-rte-island="">Heads up &lt;b&gt;&amp;&lt;/b&gt;</div>
<ul>
<li>
<p>Item</p>
<div role="group" aria-label="Unsupported content: poll" data-rte-island="">Deep</div>
</li>
</ul>
<div role="group" aria-label="Unsupported content" data-rte-island="">
</div>
<p>Mood <span role="group" aria-label="Unsupported content: sticker" data-rte-island="">smile</span> and after</p>
<div role="group" aria-label="Unsupported content: embed3d" data-rte-island="">
</div>
<p>After</p>
<div role="note" data-rte-message="islands" lang="en-US">Some content is not supported here.</div>
</div>"
`;

exports[`codec golden files > writes unknown-nodes.json as its golden HTML, plain text and Markdown > markdown 1`] = `
"Before

Heads up \\<b>\\&\\</b>

- Item

  Deep

Mood smile and after

After"
`;

exports[`codec golden files > writes unknown-nodes.json as its golden HTML, plain text and Markdown > text 1`] = `
"Before

Heads up <b>&</b>

- Item
  Deep

Mood smile and after

After"
`;

exports[`codec golden files > writes unsafe-url.json as its golden HTML, plain text and Markdown > html 1`] = `
"<div>
<p>a</p>
</div>"
`;

exports[`codec golden files > writes unsafe-url.json as its golden HTML, plain text and Markdown > markdown 1`] = `"a"`;

exports[`codec golden files > writes unsafe-url.json as its golden HTML, plain text and Markdown > text 1`] = `"a"`;
